test/loop/confidence/errors/func_call_errors_1.loop
# Errors in pattern matching functions

func() ->
  x.call(x: y, z)

